--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,49 +15,76 @@
 </head>
 
   <body>
+    <div class="Container"> 
+        <header>
+            <nav class="nav-header">
+                <a href="#">Services</a>
+                <a href="#">Product</a>
+                <a href="#">Vision</a>
+                <a href="#">Features</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
-
+            <div class="img-header">
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
+            </div>        
+        </header>  
+          <section class="title">
+            <div class="title-button">
+              <h1>Innovation</h1>
+              <h1>On</h1>
+              <h1>Demand</h1> </br>
 
-  Get Started
+              </header>
+              <button class="get-started">Get Started</button>
+            </div>
+              <img class = "top-img" src="img/header-img.png" alt="Image of a code snippet.">
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+          </section>  
+          <section class="content-columns2">
+            <div class="column-1">
+              <h2>Features</h2>
+              <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+            </div>
+            <div class="column-2">
+              <h2>About</h2>
+              <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+            </div>
+          </section>
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+              <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+          <section class="content-columns3">
+              <div class="column3-1">
+                <h2>Services</h2>
+                <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                  </p>
+              </div>
+              <div class="column3-2">
+                <h2>Product</h2>
+                <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                  </p>
+              </div>
+              <div class="column3-3">
+                <h2>Vision</h2>
+                <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                  </p>
+              </div>
+          </section>
 
+          <address>
+            <h2>Contact</h2>
+            123 Way 456 Street <br/>
+            Somewhere, USA <br/>
+            <a href="1 (888) 888-8888">1 (888) 888-8888</a><br/>
+            <a href="sales@greatidea.io">sales@greatidea.io</a>
+          </address>
+          <div class="Copyright">
+            <strong>Copyright Great Idea! 2018</strong>
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
-
-  Copyright Great Idea! 2018
-  
+          </div>
+    </div>
   </body>
 </html>
